--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "ra-data-fakerest": "^4.14.0",
+    "ra-language-french": "^4.16.5",
     "react": "^18.2.0",
     "react-admin": "^4.14.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^5.60.1",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@types/node": "^18.16.1",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitejs/plugin-react": "^4.0.1",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
